force-app/main/default/objects/Account_Application__c/Account_Application__c.object-meta.xml
<CustomObject>
    <description>Digitization: Onboarding - This object stores a client initiated request for a product such a business current account..</description>
    <label>Account Application</label>
    <nameField>
        <displayFormat>AAN-{00000000}</displayFormat>
        <label>Account Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>