force-app/main/default/objects/Account_Application__c/fields/Account_Details_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Account_Details_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Details Confirmed</label>
    <type>Checkbox</type>
</CustomField>