force-app/main/default/objects/Account_Application__c/fields/Bank_Account_Active__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Account Active</label>
    <type>Checkbox</type>
</CustomField>