force-app/main/default/objects/Account_Application__c/fields/BOL_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>BOL_Profile_Id__c</fullName>
    <label>BOL Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>