force-app/main/default/objects/Account_Application__c/fields/Business_Online__c.field-meta.xml
<CustomField>
    <fullName>Business_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Online</label>
    <type>Checkbox</type>
</CustomField>