force-app/main/default/objects/Account_Application__c/fields/Cash_Management__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Management</label>
    <type>Checkbox</type>
</CustomField>