force-app/main/default/objects/Account_Application__c/fields/CashMan_Group_No__c.field-meta.xml
<CustomField>
    <fullName>CashMan_Group_No__c</fullName>
    <label>CashMan Group No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>