force-app/main/default/objects/Account_Application__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Digitization: Onboarding - The client (Legal Entity) that has requested a new account to be opened</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Applications</relationshipLabel>
    <relationshipName>Account_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>