force-app/main/default/objects/Account_Application__c/fields/Entity_Details_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Entity_Details_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entity Details Confirmed</label>
    <type>Checkbox</type>
</CustomField>