force-app/main/default/objects/Account_Application__c/fields/OnboardingApplicationID__c.field-meta.xml
<CustomField>
    <fullName>OnboardingApplicationID__c</fullName>
    <externalId>true</externalId>
    <label>On-boarding Application ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>