force-app/main/default/objects/Account_Application__c/fields/Requester_Number__c.field-meta.xml
<CustomField>
    <fullName>Requester_Number__c</fullName>
    <description>Digitisation - On-boarding: The phone number of the person who has requested the account.</description>
    <label>Requester Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>