force-app/main/default/objects/Account_Application__c/fields/Statement_Delivery_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Statement_Delivery_Frequency__c</fullName>
    <label>Statement Delivery Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>