force-app/main/default/objects/Account_Application__c/fields/Statement_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Statement_Delivery_Method__c</fullName>
    <label>Statement Delivery Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>